--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>{{title}}</title>
+  <title>Accubrew Node Monitor</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.2/Chart.bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.min.js"></script>
   <style>
@@ -84,9 +84,7 @@
     </div>
     {{/each}}
   </div>
-  <div class="footer">
-    <p>Made with &#9829; with Socket.io & Chart.js</p>
-  </div>
+
 </div>
 <script>
   var port = '{{port}}';
