added better legend to what 2XX means

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -63,10 +63,10 @@
   <div class="container statusCodes">
     <div class="stats-column">
       <h5>Status Codes</h5>
-      <h6 class="status-code status-code-2xx">2xx</h6>
-      <h6 class="status-code status-code-3xx">3xx</h6>
-      <h6 class="status-code status-code-4xx">4xx</h6>
-      <h6 class="status-code status-code-5xx">5xx</h6>
+      <h6 class="status-code status-code-2xx">2xx (The request was successfully received, understood and accepted)</h6>
+      <h6 class="status-code status-code-3xx">3xx (Further action needs to be taken in order to complete the request)</h6>
+      <h6 class="status-code status-code-4xx">4xx (The request contains bad syntax or cannot be fulfilled)</h6>
+      <h6 class="status-code status-code-5xx">5xx (The server failed to fulfill an apparently valid request)</h6>
     </div>
     <div class="chart-container">
       <canvas id="statusCodesChart" width="200" height="100"></canvas>
