changed header, and a

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Accubrew Node Monitor</title>
+  <title>Accubrew Express Monitor</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.2/Chart.bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.min.js"></script>
   <style>
@@ -11,7 +11,7 @@
 <body class="{{bodyClasses}}">
 <div class="content">
   <div class="header">
-    <b>{{title}}</b>
+    <b>Accubrew Express Monitor</b>
     <div id="span-controls" class="span-controls">
     </div>
   </div>
